--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+::-webkit-scrollbar {
+  width: 15px;
+  height: 15px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+::-webkit-scrollbar-track {
+  border-radius: 100vh;
+  background: #f7f4ed;
+  /* background-color: red; */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #431407;
+  border-radius: 100vh;
+  border: 3px solid #f6f7ed;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #7c2d12;
+}
+
+@font-face {
+  font-family: danube;
+  src: url("../../public/fonts/danube/DANUBE__.TTF");
+}
+
+.logo__text {
+  font-family: danube;
+  color: #e36799;
+  font-weight: 600;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #e7e8f3;
 }
